src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Key_Account_Business_Lines__c</fullName>
        <label>Key Account Business Lines</label>
        <picklist>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geotechnical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining and Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LargeBusiness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Large Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_AccountID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy AccountID</label>
        <length>75</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Sharepoint_ID__c</fullName>
        <label>Legacy Sharepoint ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Risks__c</fullName>
        <description>Indicates that AECOM&apos;s Legal Department considers this account to be a risk.</description>
        <inlineHelpText>Indicates that AECOM&apos;s Legal Department considers this account to be a risk. If one or more risk factors are checked, seek guidance from your local or business line legal staff.</inlineHelpText>
        <label>Legal Risks</label>
        <picklist>
            <picklistValues>
                <fullName>Litigious and unreasonable claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unreasonable terms/negotiations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Legal Risk</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>MK_Denial__c</fullName>
        <description>Indicates whether the account has been checked at mkdenial.com in accordance with AECOM requirements. If the account has been checked, indicated results of the check. Notes related to this check can be added to the Risk Notes field.</description>
        <inlineHelpText>Indicates whether the account has been checked at mkdenial.com in accordance with AECOM requirements. If you conduct the check, attach a pdf of the check results in Notes and Attachments. Comments can be added to the Risk Notes field.</inlineHelpText>
        <label>MK Denial</label>
        <picklist>
            <picklistValues>
                <fullName>Checked - okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checked - concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checked - account is barred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check is not required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account is on Trusted Partner List</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NoSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box when you would like to opt the account out of receiving a survey.</description>
        <inlineHelpText>Check this box when you would like to opt the account out of receiving a survey.</inlineHelpText>
        <label>No Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NonProfit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Profit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_1099__c</fullName>
        <label>Num 1099</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Contracted_Opportunities__c</fullName>
        <inlineHelpText>Displays number of related opportunities in Stage 6</inlineHelpText>
        <label>Number of Contracted Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>5B Program Signed and Active, 6 Contracted/Booked/Won, 6A Program Closed/Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Opportunities__c</fullName>
        <description>Number of opportunities linked to this account record that are in Stages 1 through 5.</description>
        <inlineHelpText>Displays number of opportunities linked to this account record that are in Stages 1 through 5.</inlineHelpText>
        <label>Number of Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>startsWith</operation>
            <value>1,2,3,4,5</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Opportunities__c</fullName>
        <description>Number of opportunities linked to this account record</description>
        <inlineHelpText>Displays number of opportunities linked to this account record (including wins and losses)</inlineHelpText>
        <label>Number of Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunities_Total_Value__c</fullName>
        <description>Total value of Opportunities (including Program Estimated revenue) attached to this account.</description>
        <inlineHelpText>Approximate value of Opportunities in stages 1, 2,3, and 5 (including Program Estimated revenue for 5A) attached to this account. Use with caution. Does not account for currency.</inlineHelpText>
        <label>Opportunities Approx. Value</label>
        <summarizedField>Opportunity.AECOM_Fee__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>startsWith</operation>
            <value>1,2,3,4,5</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OracleCustomerID__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Customer ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OracleCustomerNumber__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Customer Number</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OracleVendorID__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Vendor ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OracleVendorNumber__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Vendor Number</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Oracle_Aggregator_Name__c</fullName>
        <description>Restricted access. Populate on top record in key account hierarchy. Cascades to the rest of the hierarchy through the formula field Oracle Group Customer Record Name</description>
        <inlineHelpText>Restricted access. Populated on top record in key account hierarchy and cascades to the rest of the hierarchy through the formula field Oracle Group Customer Record Name.</inlineHelpText>
        <label>Oracle Aggregator Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Aggregator_Number__c</fullName>
        <inlineHelpText>Restricted Access. Entered on top-level key clients only and cascades through hierarchy to populate the Oracle Group Customer Number field.</inlineHelpText>
        <label>Oracle Aggregator Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Group_Customer_Record_Name__c</fullName>
        <formula>IF( 
ISBLANK(ParentId),   Oracle_Aggregator_Name__c , 
IF( 
ISBLANK(Parent.ParentId), 
Parent.Oracle_Aggregator_Name__c, 
IF( 
ISBLANK(Parent.Parent.ParentId), 
Parent.Parent.Oracle_Aggregator_Name__c, 
IF( 
ISBLANK(Parent.Parent.Parent.ParentId), 
Parent.Parent.Parent.Oracle_Aggregator_Name__c, 
IF( 
ISBLANK(Parent.Parent.Parent.Parent.ParentId), 
Parent.Parent.Parent.Parent.Oracle_Aggregator_Name__c, 

Parent.Parent.Parent.Parent.Parent.Oracle_Aggregator_Name__c
) 
) 
) 
) 
)</formula>
        <inlineHelpText>aka Oracle Aggregator. Autopopulated with Oracle group customer record name for key accounts.</inlineHelpText>
        <label>Oracle Group Customer Record Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Group_Customer_Record_Number__c</fullName>
        <formula>IF(
ISBLANK(ParentId), 
Oracle_Aggregator_Number__c,  

IF( 
ISBLANK(Parent.ParentId), 
Parent.Oracle_Aggregator_Number__c,

IF( 
ISBLANK(Parent.Parent.ParentId), 
Parent.Parent.Oracle_Aggregator_Number__c, 

IF( 
ISBLANK(Parent.Parent.Parent.ParentId), 
Parent.Parent.Parent.Oracle_Aggregator_Number__c, 

IF( 
ISBLANK(Parent.Parent.Parent.Parent.ParentId), 
Parent.Parent.Parent.Parent.Oracle_Aggregator_Number__c,

Parent.Parent.Parent.Parent.Parent.Oracle_Aggregator_Number__c
) 
) 
) 
) 
)</formula>
        <inlineHelpText>Autopopulated with Oracle group customer record number for key accounts.</inlineHelpText>
        <label>Oracle Group Customer Record Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Name_Key_Accounts__c</fullName>
        <inlineHelpText>Restricted Access. Entered on top record in hierarchy for key accounts that have been set up in Oracle with task numbers for B&amp;P and M&amp;S charge numbers.</inlineHelpText>
        <label>Oracle Name (Key Accounts)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Name__c</fullName>
        <formula>IF( 
ISBLANK(ParentId),  Oracle_Name_Key_Accounts__c , 
IF( 
ISBLANK(Parent.ParentId), 
Parent.Oracle_Name_Key_Accounts__c, 
IF( 
ISBLANK(Parent.Parent.ParentId), 
Parent.Parent.Oracle_Name_Key_Accounts__c, 
IF( 
ISBLANK(Parent.Parent.Parent.ParentId), 
Parent.Parent.Parent.Oracle_Name_Key_Accounts__c, 
IF( 
ISBLANK(Parent.Parent.Parent.Parent.ParentId), 
Parent.Parent.Parent.Parent.Oracle_Name_Key_Accounts__c, 

Parent.Parent.Parent.Parent.Parent.Oracle_Name_Key_Accounts__c
) 
) 
) 
) 
)</formula>
        <inlineHelpText>Oracle name used in B&amp;P and M&amp;S charge numbers for key accounts only. Inherited from the top account in the hierarchy</inlineHelpText>
        <label>Oracle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Task__c</fullName>
        <description>Inherited from the top account in the hierarchy using a field update; editable by System Administrators.</description>
        <inlineHelpText>Oracle name used in B&amp;P and M&amp;S charge numbers for key accounts only.</inlineHelpText>
        <label>Oracle Task</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentTermName__c</fullName>
        <label>Payment Term Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_RIsks__c</fullName>
        <description>Indicates that the Office of Risk Management considers this account to pose a performance risk.</description>
        <inlineHelpText>Indicates that the Office of Risk Management considers this account to pose a performance risk. If one or more risk factor is checked, seek guidance from ORM or legal.</inlineHelpText>
        <label>Performance RIsks</label>
        <picklist>
            <picklistValues>
                <fullName>Bad faith performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excessive time to execute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Performance Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Performance Risk</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RI_Account__c</fullName>
        <inlineHelpText>For CAM group use only. Indicates which kind of Resources and Industry account this is, if any.
Removed from page layout July 2014.
Can be deleted</inlineHelpText>
        <label>R &amp; I Account_OLD</label>
        <picklist>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial - potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metals &amp; Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power &amp; Transportation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reach__c</fullName>
        <inlineHelpText>Describes extent of the entity&apos;s operation - Choose one</inlineHelpText>
        <label>Reach</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-national</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>IF (ISBLANK( State_Province_Emerate__c ), &quot;None&quot;, 
IF (CONTAINS(&quot;New Brunswick:Newfoundland:Ontario:Prince Edward Island&quot;, State_Province_Emerate__r.Name ), &quot;Canada&quot;, 
IF (CONTAINS(&quot;Nova Scotia:Quebec&quot;, State_Province_Emerate__r.Name ), &quot;Canada&quot;, 
IF (CONTAINS(&quot;Alberta:British Columbia:Manitoba:Northwest Territories:Nunavut:Saskatchewan:Yukon Territory&quot;, State_Province_Emerate__r.Name ), &quot;Canada&quot;, 
IF (CONTAINS(&quot;Arkansas:Illinois:Indiana:Iowa:Kansas:Kentucky:Michigan:Minnesota:Missouri:Nebraska:North Dakota:Ohio:South Dakota:Delaware:Wisconsin&quot;,State_Province_Emerate__r.Name ), &quot;US North&quot;, 
IF (CONTAINS(&quot;Connecticut:Maine:Massachusetts:New Hampshire:Pennsylvania:New Jersey:New York:Rhode Island:Vermont:West Virginia&quot;,State_Province_Emerate__r.Name ),&quot;US North&quot;, 
IF (CONTAINS(&quot;Alabama:Florida:Georgia:Mississippi:North Carolina:District of Columbia:Maryland:Virginia:Puerto Rico:South Carolina:Tennessee:U.S. Virgin Islands&quot;,State_Province_Emerate__r.Name ), &quot;US South&quot;, 
IF (CONTAINS(&quot;Texas :Louisiana:Oklahoma&quot;,State_Province_Emerate__r.Name ), &quot;US South&quot;, 
IF (CONTAINS(&quot;Alaska:American Samoa:Arizona:California:Colorado:Hawaii:Idaho:Montana:Nevada:New Mexico:Oregon:Utah:Washington:Wyoming:Guam: Midway Atoll:Wake Island:Mariana Islands&quot;, State_Province_Emerate__r.Name ), &quot;US West&quot;, 
IF (CONTAINS(&quot;United Arab Emirates&quot;, CountryLookup__r.Name) , BillingCity , 
CountryLookup__r.Name ))))))))))</formula>
        <inlineHelpText>autofilled based on address state</inlineHelpText>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Name__c</fullName>
        <description>Name registered with government, required for Oracle.</description>
        <inlineHelpText>Enter the name registered with government, required for Oracle.</inlineHelpText>
        <label>Registered Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Business_Number__c</fullName>
        <inlineHelpText>Enter government-issued registration number associated with Registered Business Name, e.g., an ANB or Australia Business Number</inlineHelpText>
        <label>Registration/Business Number</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Site_Access_Expiry_Date__c</fullName>
        <inlineHelpText>Enter the date when access to the account&apos;s protected website expires</inlineHelpText>
        <label>Registration Site Access Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Site_Access_Number__c</fullName>
        <inlineHelpText>Enter website address or ID to access the account&apos;s protected website</inlineHelpText>
        <label>Registration Site Access Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Site_Access_Start_Date__c</fullName>
        <inlineHelpText>Enter the date when access to the account&apos;s protected website was made available</inlineHelpText>
        <label>Registration Site Access Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReportLink__c</fullName>
        <formula>HYPERLINK(&quot;/00Oe0000000Gy2k?pv1=&quot;&amp;Id, &quot;Report Link&quot;)</formula>
        <label>Report Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Notes__c</fullName>
        <description>Comments and/or advice related to information provided in the other Risk Factor section fields.</description>
        <inlineHelpText>Comments and/or advice related to information provided in the other Risk Factor section fields.</inlineHelpText>
        <label>Risk Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SmallDisadvnBusiness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Small Disadvantage Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Status__c</fullName>
        <inlineHelpText>Enter special status designations such as DBE, WBE, SDBE</inlineHelpText>
        <label>Special Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StateAsia__c</fullName>
        <label>State/Province (Asia) - OLD</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province_Emerate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State/Province/Emirate</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>State_Province_Emirate__c.Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.CountryLookup__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>State_Province_Emirate__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Text_Value__c</fullName>
        <formula>IF(State_Province_Emerate__r.Name=&quot;&quot;, &quot;&quot; , State_Province_Emerate__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Text Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State/Province - OLD</label>
        <picklist>
            <picklistValues>
                <fullName>Aguascalientes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baja California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baja California Sur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campeche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiapas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chihuahua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coahuila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colima</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distrito Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durango</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guanajuato</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guerrero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hidalgo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <description>This field will go away after migration</description>
        <inlineHelpText>This field will go away after migration</inlineHelpText>
        <label>Street 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <description>This field will go away after migration</description>
        <inlineHelpText>This field will go away after migration</inlineHelpText>
        <label>Street 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Street address for account</description>
        <inlineHelpText>Multiple lines may be entered</inlineHelpText>
        <label>Street/PO Box</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SubsidiaryAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subsidiary Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subsidiary Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxReference__c</fullName>
        <label>Tax Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Describes relationship with AECOM - Choose all that might apply</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Client/Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime/Teaming Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concessionaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>VAT_RegistrationNumber__c</fullName>
        <label>VAT Registration Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VendorInactiveDate__c</fullName>
        <label>Vendor Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VendorType__c</fullName>
        <label>Vendor Type</label>
        <picklist>
            <picklistValues>
                <fullName>COMPANY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTRACTOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTER-COMPANY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRC_JOB_AGENCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON PROFIT ORGANIZATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBCONSULTANT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBCONTRACTOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAX AUTHORITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIME SHEET CONTRACTOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTILITIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VENDOR</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View_YTD_Bookings_for_Hierarchy__c</fullName>
        <formula>HYPERLINK(&quot;/00Oa0000007xxon?pv0=&quot;+   Hierarchy_ID__c   , &quot;Display a report of YTD bookings for all accounts in this account&apos;s hierarchy&quot;, &quot;_top&quot;)</formula>
        <label>View YTD Bookings for Hierarchy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <inlineHelpText>ZIP or other postal code</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Services_Billing_Time_Period_Type__c</fullName>
        <label>Services Billing Time Period Type</label>
        <picklist>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AGL_Resources</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>City__c</columns>
        <columns>State_Province_Emerate__c</columns>
        <columns>Client_Group__c</columns>
        <columns>Client_Subgroup__c</columns>
        <columns>Hierarchy_Group__c</columns>
        <columns>Number_of_Open_Opportunities__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hierarchy_Group__c</field>
            <operation>startsWith</operation>
            <value>Akzo</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Akzo</value>
        </filters>
        <label>AkzoNobel</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Accounts_For_Water_Business_Line</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Region__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>Key_Account_Business_Lines__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Key_Account_Business_Lines__c</field>
            <operation>includes</operation>
            <value>Water</value>
        </filters>
        <label>Accounts For Water Business Line</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Accounts_With_Oracle_Info_for_Sync_Test</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OracleVendorID__c</columns>
        <columns>OracleVendorNumber__c</columns>
        <columns>Oracle_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OracleCustomerID__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>OracleCustomerNumber__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>*DO NOT USE*</value>
        </filters>
        <label>Accounts With Oracle Info for Sync Test</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Accounts_with_Employees</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Account_Manager__c</columns>
        <columns>Global_Key_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>Accounts with Employees</label>
        <language>en_US</language>
        <sharedTo>
            <role>Americas</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Number_of_Contracted_Opportunities__c</columns>
        <columns>Number_of_Open_Opportunities__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
        </filters>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
</CustomObject>